finished project but with a few errors likes don't work properly with api I can upload files with unacceptable types

--- a/src/Components/Navbar/Navbar.styles.scss
+++ b/src/Components/Navbar/Navbar.styles.scss
@@ -3,13 +3,6 @@ a, a:hover {
   color: black !important;
 }
 
-.add-photo-btn {
-  border: none;
-  padding: 0px 10px;
-  background-color: #CDE6FA;
-  transition: .5s all;
-
-  &:hover {
-    background-color: #80b9e7;
-  }
+nav {
+  background-color: rgba(240,240,240,0.8);
 }
